feat: datasource scaffold

--- a/Frontend/ironerp-frontend/src/app/globals.css
+++ b/Frontend/ironerp-frontend/src/app/globals.css
@@ -1,6 +1,13 @@
+@import "~normalize.css/normalize.css";
+@import "~@blueprintjs/core/lib/css/blueprint.css";
+@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 :root {
   --background: #ffffff;
@@ -24,4 +31,24 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+a.link {
+  @apply text-sky-600 hover:text-sky-500 hover:border-b hover:border-b-sky-500;
+}
+
+.field-group {
+  @apply flex rounded-lg shadow-sm mb-4;
+}
+
+.field-label {
+  @apply px-4 inline-flex items-center min-w-fit rounded-s-md border border-e-0 border-gray-200 bg-gray-50 text-sm text-gray-500 dark:bg-neutral-700 dark:border-neutral-700 dark:text-neutral-400;
+}
+
+.field-input {
+  @apply py-3 px-4 pe-11 block w-full border-gray-200 shadow-sm rounded-e-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600;
+}
+
+.field-select {
+  @apply py-3 px-4 pe-9 block w-full border-gray-200 rounded-lg rounded-l-none text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600;
 }
