--- a/Frontend/ironerp-frontend/src/app/globals.css
+++ b/Frontend/ironerp-frontend/src/app/globals.css
@@ -14,7 +14,7 @@
 @import "~normalize.css/normalize.css";
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
-
+@import "~@blueprintjs/table/lib/css/table.css";
 
 @tailwind base;
 @tailwind components;
