--- a/Frontend/ironerp-frontend/src/app/components/common/Button.module.css
+++ b/Frontend/ironerp-frontend/src/app/components/common/Button.module.css
@@ -1,3 +1,16 @@
+/*
+ * This file is part of IronERP.
+ * 
+ * IronERP is free software: you can redistribute it and/or modify it under the terms of 
+ * the GNU General Public License as published by the Free Software Foundation, either 
+ * version 3 of the License, or (at your option) any later version.
+ * IronERP is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
+ * PURPOSE. See the GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License along with IronERP. 
+ * If not, see <https://www.gnu.org/licenses/>.
+ */
+
 .button {
     @apply 
         bg-default border border-default-d p-2 rounded shadow-sm text-gray-600 font-light
