--- a/Frontend/ironerp-frontend/src/app/components/common/PageHeader.module.css
+++ b/Frontend/ironerp-frontend/src/app/components/common/PageHeader.module.css
@@ -11,19 +11,26 @@
  * If not, see <https://www.gnu.org/licenses/>.
  */
 
-import type { StorybookConfig } from "@storybook/nextjs";
+.pageHeaderWrapper {
+    @apply bg-white shadow;
+}
 
-const config: StorybookConfig = {
-  stories: ["../src/**/*.mdx", "../src/**/*.stories.@(js|jsx|mjs|ts|tsx)"],
-  addons: [
-    "@storybook/addon-onboarding",
-    "@storybook/addon-essentials",
-    "@chromatic-com/storybook",
-    "@storybook/addon-interactions",
-  ],
-  framework: {
-    name: "@storybook/nextjs",
-    options: {},
-  },
-};
-export default config;
+:global(.dark) .pageHeaderWrapper {
+    @apply bg-gradient-to-b from-slate-700 to-slate-800;
+}
+
+.pageHeader {
+    @apply mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8;
+}
+
+:global(.dark) .pageHeader h2 {
+    @apply text-default;
+}
+
+:global(.dark) .subtitle {
+    @apply text-gray-100;
+}
+
+.subtitle {
+    @apply mt-2 flex items-center text-sm text-gray-500;
+}
